--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -3,4 +3,5 @@
   <view catchtap="add">添加</view>
   <view catchtap="change">改变</view>
   <view catchtap="getAll">打印所有数据</view>
+  <image style="width:200px;height:30px;" src="../../images/Group 8.svg"></image>
 </view>
